--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
     "description": "recursively transform key strings to camel-case",
     "main": "index.js",
     "devDependencies": {
-        "tap": "~0.4.0",
-        "tape": "~0.3.0"
+        "tape": "~2.3.2"
     },
     "scripts": {
-        "test": "tap test/*.js"
+        "test": "tape test/*.js"
     },
     "repository": {
         "type": "git",
