[Dev Deps] update `tape`

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "recursively transform key strings to camel-case",
     "main": "index.js",
     "devDependencies": {
-        "tape": "~2.3.2"
+        "tape": "^5.6.1"
     },
     "scripts": {
         "test": "tape test/*.js"
@@ -19,14 +19,28 @@
         "json",
         "transform"
     ],
-    "testling" : {
-        "files" : "test/*.js",
-        "browsers" : {
-            "iexplore" : [ "6.0", "7.0", "8.0", "9.0" ],
-            "chrome" : [ "20.0" ],
-            "firefox" : [ "10.0", "15.0" ],
-            "safari" : [ "5.1" ],
-            "opera" : [ "12.0" ]
+    "testling": {
+        "files": "test/*.js",
+        "browsers": {
+            "iexplore": [
+                "6.0",
+                "7.0",
+                "8.0",
+                "9.0"
+            ],
+            "chrome": [
+                "20.0"
+            ],
+            "firefox": [
+                "10.0",
+                "15.0"
+            ],
+            "safari": [
+                "5.1"
+            ],
+            "opera": [
+                "12.0"
+            ]
         }
     },
     "author": {
