--- a/package.json
+++ b/package.json
@@ -4,10 +4,14 @@
     "description": "recursively transform key strings to camel-case",
     "main": "index.js",
     "devDependencies": {
+        "@ljharb/eslint-config": "^21.0.0",
         "aud": "^2.0.1",
+        "eslint": "=8.8.0",
         "tape": "^5.6.1"
     },
     "scripts": {
+        "lint": "eslint --ext=js,mjs .",
+        "pretest": "npm run lint",
         "test": "tape test/*.js",
         "posttest": "aud --production"
     },
