[meta] create FUNDING.yml; add `funding` in package.json

--- a/package.json
+++ b/package.json
@@ -54,5 +54,8 @@
         "email": "mail@substack.net",
         "url": "http://substack.net"
     },
+    "funding": {
+        "url": "https://github.com/sponsors/ljharb"
+    },
     "license": "MIT"
 }
